refactor: adding some new features to notification module
